--- a/package.json
+++ b/package.json
@@ -41,23 +41,18 @@
     "@fb-sandbox/openrpc": "git+https://github.com/rdkcentral/firebolt-openrpc.git#next-bidirectional",
     "@fb-sandbox/schemas": "2.0.0",
     "@saithodev/semantic-release-backmerge": "^3.2.0",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^13.1.3",
-    "@semantic-release/release-notes-generator": "^10.0.1",
     "ajv": "^6.12.6",
     "form-data": ">=4.0.4",
-    "glob": ">=10.5.0",
+    "glob": "^13.0.0",
     "husky": "^8.0.0",
-    "jest": "^28.1.0",
+    "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "js-yaml": ">=4.1.1",
     "mkdirp": "^2.1.6",
     "node-fetch": "^3.3.2",
     "nopt": "^7.1.0",
     "production-changelog": "./src/js/production-changelog/",
-    "semantic-release": "^21.1.1",
     "typescript": "^4.6.4"
   },
   "keywords": [
