--- a/.releaserc
+++ b/.releaserc
@@ -30,7 +30,7 @@
     ],
     "@semantic-release/release-notes-generator",
     [
-      "production-changelog",
+      "@semantic-release/changelog",
       {
         "changelogFile": "CHANGELOG.md"
       }
@@ -51,17 +51,30 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["CHANGELOG.md", "package.json", "package-lock.json", "npm-shrinkwrap.json", "src/sdks/core/package.json", "src/sdks/manage/package.json", "src/sdks/discovery/package.json"]
+        "assets": [
+          "CHANGELOG.md",
+          "package.json",
+          "package-lock.json",
+          "npm-shrinkwrap.json",
+          "src/sdks/core/package.json",
+          "src/sdks/manage/package.json",
+          "src/sdks/discovery/package.json"
+        ]
       }
     ],
     [
       "@semantic-release/github",
       {
         "assets": [
-          { "path":"./*.tgz" },
-          { "path": "build/fb-sandbox-client--native-core-*.tar.gz", "label": "Source Code - native (tar.gz)" }
+          {
+            "path": "./*.tgz"
+          },
+          {
+            "path": "build/fb-sandbox-client--native-core-*.tar.gz",
+            "label": "Source Code - native (tar.gz)"
+          }
         ]
       }
     ]
   ]
-} 
+}
