--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,7 @@ jobs:
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
           echo "RELEASE_VERSION=$RELEASE_VERSION"
 
-      - name: Dry-run Firebolt SDKs to NPM
+      - name: Publish Firebolt SDKs to NPM
         env:
           NPM_TOKEN: ${{ secrets.SEMANTIC_RELEASE_NPM_TOKEN  }} # <-- Allows semantic-release to publish to npm without 2 factor auth.
-        run: npm publish --tag $NPM_DIST_TAG --workspaces --dry-run
+        run: npm publish --tag $NPM_DIST_TAG --workspaces
