--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,8 +36,9 @@ jobs:
 
       - name: Set up NPM token
         env:
-          NPM_TOKEN: ${{ secrets.SEMANTIC_RELEASE_NPM_TOKEN  }} # <-- allow npm publish for each workspace
-        run: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc'
+          NPM_TOKEN: ${{ secrets.NPM_RELEASE_TOKEN  }} # <-- allow npm publish for each workspace
+        run: 'echo "//registry.npmjs.org/:_auth=${NPM_TOKEN}" > .npmrc'
+        #run: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc'
 
       - name: Install npm dependencies
         run: |
@@ -87,5 +88,5 @@ jobs:
 
       - name: Publish Firebolt SDKs to NPM
         env:
-          NPM_TOKEN: ${{ secrets.SEMANTIC_RELEASE_NPM_TOKEN  }} # <-- Allows semantic-release to publish to npm without 2 factor auth.
+          NPM_TOKEN: ${{ secrets.NPM_RELEASE_TOKEN  }} # <-- Allows semantic-release to publish to npm without 2 factor auth.
         run: npm publish --tag $NPM_DIST_TAG --workspaces
